--- a/index.html
+++ b/index.html
@@ -366,12 +366,13 @@ body > div > p {
 <div id="sideMenu" class="sidemenu">
     <a href="#" onclick="toggleMenu()">✖ إغلاق</a>
     <a href='/'>الصفحة الرئيسية</a>
-    <a href='/venomp'>الدعم</a>
-    <a href='/venomb'>البوتات</a>
-    <a href='/venomp'>الالعاب</a>
-    <a href='/venomp'>البرمجه</a>
-    <a href='/venomsc'>قول آه</a>
-    <a href='/venomsc'>الشارع اللي ورا</a>
+    <a href="error.html">الدعم</a>
+    <a href="error.html">البوتات</a>
+    <a href="error.html">الالعاب</a>
+    <a href="error.html">البرمجه</a>
+    <a href="error.html">قول آه</a>
+    <a href="error.html">الشارع اللي ورا</a>
+  <a href="venomp.html" translate="_blank">الدعم</a>
 </div>
     <div id="venoom">
     <p>بـيـو</p>
@@ -398,25 +399,25 @@ function venomMenu() {
  
 wet.addEventListener("click", function() {
 
-  window.location.href = "https://wa.me/+972569378785";
+  window.location.href = "https://wa.me/+201551179695";
 });
 var ins = document.getElementById("ins");
  
 ins.addEventListener("click", function() {
 
-  window.location.href = "https://www.instagram.com/venom_y_11";
+  window.location.href = "https://www.instagram.com/misho_64";
 });
 var tlg = document.getElementById("viin");
  
 viin.addEventListener("click", function() {
 
-  window.location.href = "https://t.me/venom_xov";
+  window.location.href = "https://t.me/misho_64";
 });
 var dsk = document.getElementById("dsk");
  
 dsk.addEventListener("click", function() {
 
-  window.location.href = "https://discord.com/invite/2wKbDJNd";
+  window.location.href = "https://discord.com/";
 });
 
 
