--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ body > div > p {
     <button class="vooo" id="button-a" onclick="toggleMenu()">☰ القائمة</button>
 <div id="sideMenu" class="sidemenu">
     <a href="#" onclick="toggleMenu()">✖ إغلاق</a>
-    <a href='/'>الصفحة الرئيسية</a>
+    <a href="index.html">الصفحة الرئيسية</a>
     <a href="error.html">الدعم</a>
     <a href="error.html">البوتات</a>
     <a href="error.html">الالعاب</a>
