--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ body > div > p {
     <h1 style="color: white"><span style="color: firebrick">M</span>isho <span style="color: firebrick">64</span></h1>
     <div id="klop">
         <p>منورين موقعي</p>
-         <p>اللي عاملو الساعة 2:AM</p>
+         <p>اللي عاملو الساعة 3:30AM</p>
          <p>انزل بالشاشة و افتح القائمة بس الازرار لسه مش شغاله</p>
 </div>
     <div id="wet2">
